2011-05-11  Joseph Myers  <joseph@codesourcery.com>
	    Hans-Peter Nilsson  <hp@axis.com>

	PR sim/12737
	* sim/arm/iwmmxt/wcmpgt.cgs, sim/arm/iwmmxt/wmac.cgs,
	sim/arm/iwmmxt/wsra.cgs, sim/arm/xscale/blx.cgs: Kfail.

2011-05-04  Joseph Myers  <joseph@codesourcery.com>

	* configure: Regenerate.
	* sim/arm/allinsn.exp (xscale*-*-*): Don't handle target.
	* sim/arm/misc.exp (thumb*-*-*, xscale*-*-*): Don't handle
	targets.
	* sim/arm/iwmmxt/iwmmxt.exp: Test for arm*-*-* instead of
	xscale*-*-*.
	* sim/arm/thumb/allthumb.exp (thumb*-*-*): Don't handle target.
	* sim/arm/xscale/xscale.exp: Test for arm*-*-* instead of
	xscale*-*-*.

2010-10-07  Hans-Peter Nilsson  <hp@axis.com>

	* sim/cris/c/seek3.c, sim/cris/c/seek4.c: New tests.

2010-08-24  Hans-Peter Nilsson  <hp@axis.com>

	* sim/cris/asm/nonvcv32.ms: Neutralize changed &&-in-macro gas syntax.

2010-04-26  Mike Frysinger  <vapier@gentoo.org>

	* Makefile.in (arch): Set to @sim_arch@.
	* configure.ac: Delete arch logic and include ../configure.tgt.
	* configure: Regenerated.
	* lib/sim-defs.exp (sim_run): Default sim to ../arch/run.

2009-08-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* configure: Regenerate.

2009-01-18  Hans-Peter Nilsson  <hp@axis.com>

	* sim/cris/asm/opterr5.ms, sim/cris/asm/opterr4.ms,
	sim/cris/asm/opterr3.ms, sim/cris/asm/bare3.ms: New tests.
	* lib/sim-defs.exp (run_sim_test): New option progopts.

2009-01-06  Hans-Peter Nilsson  <hp@axis.com>

	* sim/cris/c/mmap5.c, sim/cris/c/mmap6.c, sim/cris/c/mmap7.c,
	sim/cris/c/mmap8.c, sim/cris/c/hellodyn3.c: New tests.

2009-01-03  Hans-Peter Nilsson  <hp@axis.com>

	* sim/cris/c/settls1.c: New test.
	* sim/cris/c/exitg1.c, sim/cris/c/exitg2.c: New tests.
	* sim/cris/c/uname1.c: New test.
	* sim/cris/c/mmap1.c (MMAP_FLAGS): Default-define to
	MAP_PRIVATE and use this macro in the mmap call.
	* sim/cris/c/mmap4.c: New test.
	* sim/cris/c/access1.c: New test.
	* sim/cris/asm/pid1.ms: New test.

2008-12-30  Hans-Peter Nilsson  <hp@axis.com>
